# boilerplates

./: .gitignore  README.md
Makefiles/: Makefile  Makefile.cpp  Makefile.reactnative  Makefile.rust
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md
cpp/src/: main.cpp
elm/: .gitignore  elm-package.json  gulpfile.js  package-lock.json  package.json
elm/src/: index.html
elm/src/app/: App.elm  Messages.elm  Models.elm  Routing.elm  Update.elm  View.elm
elm/src/scss/: _fonts.scss  general.scss
elm/src/scss/fontawesome/: _variables.scss
flutter/desktop/: README.md  pubspec.yaml  setup.sh
flutter/desktop/lib/: main.dart
flutter/desktop/lib/components/app/: component.dart  provider.dart
flutter/desktop/lib/components/nav/: component.dart  provider.dart
rust/axum/: .gitignore  .ignore  Cargo.toml  Makefile  rust-toolchain.toml  rustfmt.toml
rust/axum/src/: env.rs  lib.rs  main.rs  router.rs
rust/axum/src/livereload/: inject.rs  mod.rs  overlay.rs  poll.rs  polyfill.rs  predicate.rs
rust/axum/src/logging/: middleware.rs  mod.rs
rust/axum/src/results/: mod.rs
rust/axum/src/results/errors/: message.rs  mod.rs  server.rs  system.rs
rust/axum/src/styles/: mod.rs
rust/axum/src/views/: mod.rs
rust/axum/src/views/templates/: _livereload.html
rust/cli/: .envrc  .gitignore  Cargo.toml  Makefile
rust/cli/src/: lib.rs  main.rs  result.rs
rust/tide/api/: .envrc  Cargo.toml  Makefile
rust/tide/api/src/: env.rs  main.rs  state.rs
rust/tide/api/src/data/: connection.rs  mod.rs
rust/tide/api/src/data/models/: mod.rs  model.rs
rust/tide/api/src/data/providers/: mod.rs  provider.rs
rust/tide/api/src/render/: mod.rs
rust/tide/api/src/routes/: landing.rs  mod.rs
rust/tide/api/src/views/: index.html  layout.html
shell/libexec/: main
shell/libexec/commands/: hello.sh
shell/libexec/libs/: __yaml.sh
swift/: Makefile  Package.swift  README.md
swift/Sources/boilerplate/: console.swift
typescript/electron/: launch.js  package.json  tsconfig.json
typescript/electron/src/: index.html  index.scss  index.tsx
typescript/electron/src/app/: index.tsx
typescript/express/: ormconfig.json  package.json  tsconfig.json
typescript/express/src/: server.ts
typescript/express/src/app/: index.ts
typescript/express/src/app/resources/: index.ts  main.ts  resource.ts
typescript/express/src/app/utils/: interval.ts
typescript/frontend/: .gitignore  package.json  tsconfig.json
typescript/frontend/src/: index.html  index.tsx
typescript/frontend/src/app/: index.tsx
typescript/frontend/src/styles/: app.scss
website/: .gitignore  gulpfile.js  package-lock.json  package.json
website/_build/: header.html  index.html
website/_build/css/: general.css  global.css
website/_build/css/fontawesome/: fa-brands.css  fa-light.css  fa-regular.css  fa-solid.css  fontawesome.css
website/_build/js/: vendor.js
website/src/: index.html
website/src/scss/: _fonts.scss  _main.scss  _mixins.scss  general.scss  global.scss
website/src/sections/: example.html  nav.html
