[package]
name = "boilerplate"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
oxide = {git = "https://github.com/wess/oxide.git", branch = "master"}
tokio = {version = "1.21.2", features = ["full"]}
futures = "0.3.24"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
chrono = {version = "0.4.22", features = ["serde"]}
anyhow = "1.0.65"
thiserror = "1.0.37"
mime = "0.3.16"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.15", features = ["env-filter", "fmt", "std", "json"]}
lazy_static = "1.4.0"
derive_more = "0.99.17"
tower = {version = "0.4.13", features = ["util", "timeout", "load-shed", "limit", "tokio", "tokio-stream", "tokio-util"]}
axum = {version = "^0.6.0-rc.5", features = ["form", "http1", "http2", "json", "matched-path", "original-uri", "query", "tower-log", "headers", "multipart","ws"]}
axum-extra = {version = "^0.4.0-rc.3", features = ["form","query","spa"]}
tera = "1.17.1"
grass = "0.11.2"
# headers = "0.3.8"
dotenvy = "0.15.6"
http = "0.2.8"
bytes = "1.3.0"
http-body = "0.4.5"
pin-project-lite = "0.2.9"

[dependencies.tower-http]
version = "0.3.4"
features = ["full"]

