[package]
name    = "APP"
version = "0.0.1"
authors = ["wess <me@wess.io>"]
edition = "2018"

[dependencies]
tide        = "0.15.0"
tera        = "1.5.0"
tide-tera   = "0.2.2"
async-std   = { version = "1.7.0", features = ["attributes"] }
async-trait = "0.1.41"
serde       = {version="^1.0.118", features=["derive"]}
serde_json  = "^1.0.60"
serde_qs    = "0.7.0"
chrono      = { version = "^0.4.6", features = ["serde"] }
lazy_static = "1.4.0"

[dependencies.mongodb]
version           = "1.1.1"
default-features  = false
features          = ["async-std-runtime"]